// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`BpkChatNotification should render correctly with an icon 1`] = `
<DocumentFragment>
  <output
    aria-atomic="true"
    class="bpk-chat-notification"
    data-backpack-ds-component="ChatNotification"
    data-testid="bpk-chat-notification"
  >
    <span
      class="bpk-chat-notification__icon"
    >
      <svg
        data-testid="mock-icon"
      />
    </span>
    <span
      class="bpk-text bpk-text--footnote"
      data-backpack-ds-component="Text"
    >
      Thanks for your feedback!
    </span>
  </output>
</DocumentFragment>
`;

exports[`BpkChatNotification should render correctly without an icon 1`] = `
<DocumentFragment>
  <output
    aria-atomic="true"
    class="bpk-chat-notification"
    data-backpack-ds-component="ChatNotification"
    data-testid="bpk-chat-notification"
  >
    <span
      class="bpk-text bpk-text--footnote"
      data-backpack-ds-component="Text"
    >
      Thanks for your feedback!
    </span>
  </output>
</DocumentFragment>
`;
